# pysplit

./: Dockerfile  README.md
hysplit.v5/: Makefile  Makefile.inc  Makefile.inc.gfortran  Makefile.inc.intel  README_external_libraries.txt  Readme_hysplit.txt
hysplit.v5/auxiliary/: ICRP-07_license.txt
hysplit.v5/bdyfiles/: ASCDATA.CFG  Makefile  Readme_bdyfiles.txt  bdy2bin.f
hysplit.v5/cluster/: readme_cluster.txt
hysplit.v5/cmaq/: Makefile  Readme_cmaq.txt  con2cdf3.f  con2cdf4.f  conc2api.f  mcip2arl.f  traj2api.f
hysplit.v5/data2arl/: Readme_data2arl.txt  mm5v3.tar  rams5.tar  rams6.tar
hysplit.v5/datem/: Readme_datem.txt  (+4 more)
hysplit.v5/gisprog/arlshapes/: Makefile  Makefile.in  ascii2shp  ascii2shp.c  config.h  config.hin  config.status  configure  configure.ac  dbf2csv  dbf2csv.c  gridwork.h  po.txt  shapeHysplitOut  shapeHysplitOut.c  shapearea  shapearea.c  shapecat  shapecat.c  shapematch  shapematch.c  shapesplit  shapesplit.c  shapesvg  shapesvg.c  shapeunion  shapeunion.c
hysplit.v5/gisprog/arlshapes/arcview1/: Makefile  Makefile.in  adtutil.c  config.h  config.h.in  shapext.c  shapext.h  utils.c  utils.h  vector2.c  vector2.h
hysplit.v5/gisprog/arlshapes/arcview2/: Makefile  Makefile.in  config.h  config.h.in  dbfopen.c  shpopen.c
hysplit.v5/gisprog/arlshapes/contour/: Makefile  Makefile.in  config.h  config.hin  gridwork.c  shapeContour.c  shapeContour.h  splitobj.c  splitobj.h
hysplit.v5/gisprog/arlshapes/shapeutil/: Makefile  Makefile.in  arrayutil.c  arrayutil.h  intersectable.c  shapeuidraw.c  shapeuidraw.h  unformio.c  unformio.h
(+2015 files in other folders)
